aligh design to be rtl

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,9 @@
       <div class="sidebar-background" style="background-image: url(../assets/img/sidebar-4.jpg)"></div>
   </div>
   <div class="main-panel">
-
+    <div>
+      <app-dashboard></app-dashboard>
+      <app-footer></app-footer>
+    </div>
   </div>
 </div>
