--- a/src/assets/scss/core/_sidebar-and-main-panel.scss
+++ b/src/assets/scss/core/_sidebar-and-main-panel.scss
@@ -193,8 +193,8 @@
 
         i{
             font-size: 24px;
-            float: left;
-            margin-right: 15px;
+            float: right;
+            margin-left: 15px;
             line-height: 30px;
             width: 30px;
             text-align: center;
@@ -257,11 +257,12 @@
         }
 
         p{
-            float: left;
+            float: right;
             font-size: 20px;
             margin: 10px 10px;
             color: $white-color;
             line-height: 20px;
+            text-align: right;
         }
 
         .simple-text{
