--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
   </div>
   <div class="main-panel">
     <div>
+      <app-navbar></app-navbar>
       <app-dashboard></app-dashboard>
       <app-footer></app-footer>
     </div>
