--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top">
+<nav class="navbar navbar-expand-lg navbar-transparent  navbar-absolute fixed-top ">
   <div class="container-fluid">
       <div class="navbar-wrapper">
         <a class="navbar-brand" href="#">{{getTitle()}}</a>
@@ -36,7 +36,7 @@
                           <span class="d-lg-none d-md-block">Some Actions</span>
                       </p>
                   </a>
-                  <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                  <div class="dropdown-menu dropdown-menu-left" aria-labelledby="navbarDropdownMenuLink">
                       <a class="dropdown-item" href="#">Mike John responded to your email</a>
                       <a class="dropdown-item" href="#">You have 5 new tasks</a>
                       <a class="dropdown-item" href="#">You're now friend with Andrew</a>
