--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
   <div class="main-panel">
     <div>
       <app-navbar></app-navbar>
-      <app-dashboard></app-dashboard>
+      <router-outlet></router-outlet>
       <app-footer></app-footer>
     </div>
   </div>
