--- a/src/app/userprofile/userprofile.component.html
+++ b/src/app/userprofile/userprofile.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<div class="main-content" >
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-8">
@@ -8,7 +8,7 @@
             <p class="card-category">Complete your profile</p>
           </div>
           <div class="card-body">
-            <form>
+            <form *ngIf="user">
               <div class="row">
                 <div class="col-md-5">
                   <mat-form-field class="example-full-width">
@@ -22,14 +22,14 @@
                 </div>
                 <div class="col-md-4">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="אימייל" type="email">
+                    <input matInput placeholder="מייל" [(ngModel)]="user.investorEmail" type="email" name="email">
                   </mat-form-field>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="שם פרטי" type="text">
+                    <input   matInput placeholder=" שם פרטי" [(ngModel)]="user.investorFirstName" type="text" name="firstName">
                   </mat-form-field>
                 </div>
                 <div class="col-md-6">
@@ -77,7 +77,7 @@
                   </div> -->
                 </div>
               </div>
-              <button mat-raised-button type="submit" class="btn btn-danger pull-right">עדכן פרופיל</button>
+              <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="print()"> עדכן פרופיל</button>
               <div class="clearfix"></div>
             </form>
           </div>
