--- a/src/app/userprofile/userprofile.component.html
+++ b/src/app/userprofile/userprofile.component.html
@@ -1,4 +1,4 @@
-<div class="main-content" >
+<div class="main-content">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-8">
@@ -7,8 +7,8 @@
             <h4 class="card-title">ערוך פרופיל</h4>
             <p class="card-category">Complete your profile</p>
           </div>
-          <div class="card-body">
-            <form *ngIf="user">
+          <div class="card-body"  >
+            <form >
               <div class="row">
                 <div class="col-md-5">
                   <mat-form-field class="example-full-width">
