almost done with login card

--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -1,9 +1,17 @@
-<div class="login-page">
+<div class="login-page" dir="rtl">
       <div class="col-lg-4 login">
         <div class="card card-profile test">
           <div class="card-avatar">
-            <i class="material-icons icon">account_circle</i>
+          <i class="material-icons icon">account_circle</i>
+        </div>
+
+          <div style="text-align: center">
+            <h1 class="title">שלום</h1>
+            <p>
+            הזן פרטים על מנת להתחבר
+            </p>
           </div>
+
           <div class="card-body">
             <form (ngSubmi)="onSignIn(f)" #f="ngForm" class="text-center">
               <div fxFlex fxLayout="row" fxLayout.lt-md="column">
@@ -13,8 +21,11 @@
                   <!--<span class="bar"></span>-->
                   <!--<label> <i class="material-icons input-login-icon ">email </i><span class="span-input"></span></label>-->
                   <!--</div>-->
-                  <mat-form-field class="w-80">
+
+                  <mat-form-field class="w-80" appearance="outline">
+                    <mat-label>דואר אלקטרוני</mat-label>
                     <input matInput placeholder="מייל"  type="email" name="email">
+                    <mat-icon matSuffix>email</mat-icon>
                   </mat-form-field>
                 </div>
               </div>
@@ -25,15 +36,17 @@
                   <!--<span class="bar"></span>-->
                   <!--<label> <i class="material-icons input-login-icon ">lock</i><span class="span-input"></span></label>-->
                   <!--</div>-->
-                  <mat-form-field class="w-80">
+                  <mat-form-field class="w-80" appearance="outline">
+                    <mat-label>סיסמא</mat-label>
                     <input matInput placeholder="סיסמא"  type="password" name="password" required>
+                    <mat-icon matSuffix>lock</mat-icon>
                   </mat-form-field>
                 </div>
               </div>
-              <mat-divider> </mat-divider>
+              <!--<mat-divider> </mat-divider>-->
               <div class="row" layout-align="center center">
                 <div class="col-md-4"></div>
-                <div class="col-md-4" layout-align="center center">
+                <div class="col-md-4 loginbutton" layout-align="center center">
                   <button mat-raised-button type="submit" class="btn btn-outline-info pull-right w-100" (click)="signIn()">התחבר</button>
                   <div class="clearfix"></div>
                 </div>
