--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -75,14 +75,20 @@ justify-content: center;
   font-size: 150px;
   color: #00bcd4;
 }
-
+.title{
+  padding-top: 20px;
+}
 
 .test{
   width: 550px;
-  height: 300px;
+  height: 650px;
   display: block;
   margin-left:auto;
   margin-right:auto;
   margin-top: 100px;
   vertical-align:middle;
+}
+
+.loginbutton{
+  margin-top:105px;
 }
