adding routing logic for any other path

--- a/src/app/auth/signin/signin.component.scss
+++ b/src/app/auth/signin/signin.component.scss
@@ -87,6 +87,7 @@ justify-content: center;
   margin-right:auto;
   margin-top: 100px;
   vertical-align:middle;
+  box-shadow: 0 16px 38px -12px rgba(0, 0, 0, 0.56), 0 4px 25px 0px rgba(0, 0, 0, 0.12), 0 8px 10px -5px rgba(0, 0, 0, 0.2);
 }
 
 .loginbutton{
