--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -68,6 +68,9 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+            <app-cardlist></app-cardlist>
+         </div>
         </div>
     </div>
 </div>
