--- a/src/app/userprofile/userprofile.component.html
+++ b/src/app/userprofile/userprofile.component.html
@@ -1,4 +1,4 @@
-<div class="main-content">
+<div class="main-content" *ngIf="user">
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-8">
