finishing the list

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -68,9 +68,14 @@
                     </div>
                 </div>
             </div>
+        </div>
+          <div class="row">
             <div class="col-lg-6 col-md-12 col-sm-12">
-            <app-cardlist></app-cardlist>
-         </div>
+              <app-cardlist></app-cardlist>
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+              <app-cardlist></app-cardlist>
+            </div>
         </div>
     </div>
 </div>
