--- a/src/app/shared/cardlist/cardlist.component.html
+++ b/src/app/shared/cardlist/cardlist.component.html
@@ -1,73 +1,73 @@
 <div class="card">
   <div class="card-header card-header-danger" style="text-align: right">
-    <h4 class="card-title">Team Members</h4>
-    <p class="card-category">some subtitle</p>
+    <h4 class="card-title">רשימה של אנשים</h4>
+    <p class="card-category">תת כותרת</p>
   </div>
   <div class="card-body" style="text-align: right;">
     <ul class="mdc-list list-unstyled team-members" aria-orientation="vertical">
-      <li class="mdc-list-item "  tabindex="0">
-        <div class="row">
-          <div class="col-xs-3">
+      <li class="mdc-list-item " *ngFor="let person of nameList" tabindex="0">
+        <div class="flex-container">
+          <div class="fill-space" >
             <div class="avatar">
               <img src="assets/img/faces/face-0.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
             </div>
           </div>
-          <div class="col-xs-6">
-            DJ Khaled
+          <div class="fill-space">
+           {{person.name}}
             <br />
-            <span class="text-muted"><small>Offline</small></span>
+            <!--<span class="text-muted"><small>Offline</small></span>-->
           </div>
-
-          <div class="col-xs-3 text-right">
+          <div >
             <button mat-raised-button type="submit" class="btn btn-success myButton btn-round btn-just-icon">
               <i class="material-icons">mail</i>
               <div class="ripple-container"></div>
             </button>
           </div>
         </div>
+        <hr class="mdc-list-divider">
       </li>
-      <hr class="mdc-list-divider">
-      <li class="mdc-list-item"> <div class="row">
-        <div class="col-xs-3">
-          <div class="avatar">
-            <img src="assets/img/faces/face-1.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-          </div>
-        </div>
-        <div class="col-xs-6">
-          Creative Tim
-          <br />
-          <span class="text-success"><small>Available</small></span>
-        </div>
 
-        <div class="col-xs-3 text-right">
-          <button mat-raised-button type="submit" class="btn btn-success myButton btn-round btn-just-icon">
-            <i class="material-icons">mail</i>
-            <div class="ripple-container"></div>
-          </button>
-        </div>
-      </div></li>
-      <hr class="mdc-list-divider">
-      <li class="mdc-list-divider">
-        <div class="row">
-          <div class="col-xs-3">
-            <div class="avatar">
-              <img src="assets/img/faces/face-3.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">
-            </div>
-          </div>
-          <div class="col-xs-6">
-            Flume
-            <br />
-            <span class="text-danger"><small>Busy</small></span>
-          </div>
-
-          <div class="col-xs-3 text-left">
-            <button mat-raised-button type="submit" class="btn btn-success myButton btn-round btn-just-icon">
-              <i class="material-icons">mail</i>
-              <div class="ripple-container"></div>
-            </button>
-          </div>
-        </div>
-      </li>
+      <!--<li class="mdc-list-item "  tabindex="0">-->
+        <!--<div class="flex-container">-->
+          <!--<div class="fill-space" >-->
+            <!--<div class="avatar">-->
+              <!--<img src="assets/img/faces/face-2.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="fill-space">-->
+            <!--שם כל שהוא הגיוני נוסף-->
+            <!--<br />-->
+            <!--&lt;!&ndash;<span class="text-muted"><small>Offline</small></span>&ndash;&gt;-->
+          <!--</div>-->
+          <!--<div >-->
+            <!--<button mat-raised-button type="submit" class="btn btn-success myButton btn-round btn-just-icon">-->
+              <!--<i class="material-icons">mail</i>-->
+              <!--<div class="ripple-container"></div>-->
+            <!--</button>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</li>-->
+      <!--<hr class="mdc-list-divider">-->
+      <!--<li class="mdc-list-item " tabindex="0">-->
+        <!--<div class="flex-container">-->
+          <!--<div class="fill-space" >-->
+            <!--<div class="avatar">-->
+              <!--<img src="assets/img/faces/face-1.jpg" alt="Circle Image" class="img-circle img-no-padding img-responsive">-->
+            <!--</div>-->
+          <!--</div>-->
+          <!--<div class="fill-space">-->
+            <!--שם כל שהוא הגיוני-->
+            <!--<br />-->
+            <!--&lt;!&ndash;<span class="text-muted"><small>Offline</small></span>&ndash;&gt;-->
+          <!--</div>-->
+          <!--<div >-->
+            <!--<button mat-raised-button type="submit" class="btn btn-success myButton btn-round btn-just-icon">-->
+              <!--<i class="material-icons">mail</i>-->
+              <!--<div class="ripple-container"></div>-->
+            <!--</button>-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--</li>-->
     </ul>
   </div>
   <div class="card-footer">
