--- a/src/app/userprofile/userprofile.component.html
+++ b/src/app/userprofile/userprofile.component.html
@@ -12,53 +12,53 @@
               <div class="row">
                 <div class="col-md-5">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="Company (disabled)" disabled>
+                    <input matInput placeholder="Company (disabled)" [(ngModel)]="user.Company" name="company" disabled>
                   </mat-form-field>
                 </div>
                 <div class="col-md-3">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="שם משתמש">
+                    <input matInput placeholder="שם משתמש" [(ngModel)]="user.userName" name="userName" disabled>
                   </mat-form-field>
                 </div>
                 <div class="col-md-4">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="מייל" [(ngModel)]="user.investorEmail" type="email" name="email">
+                    <input matInput placeholder="מייל" [(ngModel)]="user.Email" type="email" name="email">
                   </mat-form-field>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6">
                   <mat-form-field class="example-full-width">
-                    <input   matInput placeholder=" שם פרטי" [(ngModel)]="user.investorFirstName" type="text" name="firstName">
+                    <input   matInput placeholder=" שם פרטי" [(ngModel)]="user.FirstName" type="text" name="firstName">
                   </mat-form-field>
                 </div>
                 <div class="col-md-6">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="שם משפחה" type="text">
+                    <input matInput placeholder="שם משפחה" [(ngModel)]="user.LastName" name="lastName" type="text">
                   </mat-form-field>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-12">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="כתובת" type="text">
+                    <input matInput placeholder="כתובת" [(ngModel)]="user.Address" name="address" type="text">
                   </mat-form-field>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-4">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="עיר" type="text">
+                    <input matInput placeholder="עיר" [(ngModel)]="user.City" name="city" type="text">
                   </mat-form-field>
                 </div>
                 <div class="col-md-4">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="ארץ" type="text">
+                    <input matInput placeholder="ארץ" [(ngModel)]="user.Country" name="country" type="text">
                   </mat-form-field>
                 </div>
                 <div class="col-md-4">
                   <mat-form-field class="example-full-width">
-                    <input matInput placeholder="מיקוד" type="text">
+                    <input matInput placeholder="מיקוד" [(ngModel)]="user.PostalCode" name="postalCode" type="text">
                   </mat-form-field>
                 </div>
               </div>
@@ -66,7 +66,7 @@
                 <div class="col-md-12">
                   <label>About Me</label>
                   <mat-form-field class="example-full-width">
-                    <textarea matInput placeholder="הערות"></textarea>
+                    <textarea matInput placeholder="הערות" [(ngModel)]="user.Comments" name="comments"></textarea>
                   </mat-form-field>
                   <!-- <div class="form-group">
 
@@ -77,7 +77,7 @@
                   </div> -->
                 </div>
               </div>
-              <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="print()"> עדכן פרופיל</button>
+              <button mat-raised-button type="submit" class="btn btn-danger pull-right" (click)="print()" disabled> עדכן פרופיל</button>
               <div class="clearfix"></div>
             </form>
           </div>
