adding functionality to pagination

--- a/src/app/shared/cardlist/cardlist.component.html
+++ b/src/app/shared/cardlist/cardlist.component.html
@@ -70,8 +70,10 @@
       <!--</li>-->
     </ul>
   </div>
-  <div class="card-footer">
-    <app-pagination></app-pagination>
+  <div class="card-footer flex-container-center">
+    <div >
+      <app-pagination [pagSize]="9"></app-pagination>
+    </div>
    </div>
 </div>
 
