--- a/src/app/shared/pagination/pagination.component.html
+++ b/src/app/shared/pagination/pagination.component.html
@@ -1,9 +1,8 @@
 <nav aria-label="Page navigation example myNav" class="myNav">
-  <ul class="pagination pagination-primary">
-    <li class="page-item active"><a class="page-link" href="#">1</a></li>
-    <li class="page-item"><a class="page-link" href="#link">2</a></li>
-    <li class="page-item"><a class="page-link" href="#link">3</a></li>
-    <li class="page-item"><a class="page-link" href="#link">4</a></li>
-    <li class="page-item"><a class="page-link" href="#link">5</a></li>
+  <ul class="pagination pagination-primary" >
+    <li class="page-item " [ngClass]="{'active':activeIndex === i}" *ngFor="let page of arr; let i = index"
+        (click)="toggleActive(i)">
+      <a class="page-link" id={{i+1}}>{{i+1}}</a>
+    </li>
   </ul>
 </nav>
